# Vi-QA

./: README.md  pyproject.toml  run_benchmark.py  setup_dep.sh
configs/: benchmark.yaml
configs/teacher_data/: default.yaml
poc1/: poc1.py  pyproject.toml  setup_dep.sh  to_delete.txt
poc1/configs/: poc1_config.yaml
poc1/modules/: __init__.py
poc1/modules/data/: __init__.py  loader.py  sampler.py
poc1/modules/evaluation/: __init__.py  analyzer.py  metrics.py
poc1/modules/inference/: __init__.py  base.py  runner.py
poc1/modules/inference/adapters/: __init__.py  qwen.py  vintern.py
poc1/modules/reporting/: __init__.py  charts.py  table.py
scripts/: merge_shards.py  retry_failed.py  run_teacher_build.py  run_verify_gui.py
src/data/: image_provider.py  loader.py  sampler.py
src/evaluation/: __init__.py  analyzer.py  metrics.py
src/gui/: __init__.py
src/gui/verify/: __init__.py  app.py  renderer.py  store.py
src/inference/: __init__.py  base.py  runner.py
src/inference/adapters/: __init__.py  qwen.py  vintern.py
src/pipelines/: __init__.py
src/pipelines/teacher_data/: __init__.py  checkpoint.py  config.py  loader.py  models.py  orchestrator.py  parser.py  planner.py  prompt_builder.py  qa_report.py  teacher_client.py  validator.py  writer.py
src/reporting/: __init__.py  charts.py  table.py
